<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_SAFETY_FBTWOHAND" Id="{761e870a-077d-49a9-9897-2389a0d0f0b2}">
    <Declaration><![CDATA[TYPE ST_SAFETY_FBTWOHAND:
STRUCT
	uStatus							: U_SAFETY_TWOHAND; 	(* Typ zalezny od bloku *)
	eState							: E_SAFETY_FBState;		(* Enum ze statusem bloku *)
	bGeneralError					: BOOL; 				(* Gdy wystapi chociaz jeden Error *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>