<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SAFETY_StatusFB_TO_TWOHAND" Id="{021bffa3-585e-42e4-8133-e71e6848c295}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SAFETY_StatusFB_TO_TWOHAND : ST_SAFETY_FBTWOHAND
VAR_INPUT
	stFBStatus						: ST_SAFETY_FBStatus; 	(* Struktura ogolna *)
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_SAFETY_StatusFB_TO_TWOHAND.uStatus.stStatusWords	:= stFBStatus;									(* Przepisanie *)
F_SAFETY_StatusFB_TO_TWOHAND.eState 					:= stFBStatus.BState;							(* Ustawienie enum *)
F_SAFETY_StatusFB_TO_TWOHAND.bGeneralError			:= stFBStatus.wDiagnosis <> 0;					(* General Error *)
]]></ST>
    </Implementation>
    <LineIds Name="F_SAFETY_StatusFB_TO_TWOHAND">
      <LineId Id="3" Count="2" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>